--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,4 @@
+
 kind: pipeline
 name: OSQ
 
@@ -12,4 +13,9 @@ steps:
   - qio platform install file://.
   - pio run -d examples/native-blink
   - pio run -d examples/spl-blink
+  - pio run -d examples/spl-flash
+  - pio run -d examples/spl-uart-loopback
+  - pio run -d examples/spl-uart-simple-printf
   - pio run -d examples/arduino-fade-all-pins
+  - pio run -d examples/arduino-internal-lib
+  - pio run -d examples/arduino-ping-hc04
