--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,11 +1,10 @@
-name: CD
+name: QCD
 
 on:
   push:
     branches:
       - qio
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
       - "[0-9]+.[0-9]+.[0-9]+*"
 
 env:
