--- a/.github/workflows/QIO.yml
+++ b/.github/workflows/QIO.yml
@@ -1,20 +1,21 @@
-name: CI
+name: QIO
 
 on:
   push:
     branches:
       - qio
-    paths-ignore:
-      - '**.md'
-      - '**/CD.yml'
-      - '**/nightly.yml'
+    paths:
+      - 'boards/**'
+      - 'extend/**'
+      - 'misc/**'
+      - 'examples/**'
+      - 'link.json'
+      - 'link.py'
 
-env:
-  UPLOAD_BUILD: true
 
 jobs:
   CodeCheck:
-    name: CodeCheck
+    name: Lint
     runs-on: ubuntu-latest
     steps:
     - name: Check out
@@ -26,13 +27,12 @@ jobs:
       uses: Qful/check-action@master
       with:
         github_token: ${{ secrets.OSQ_REPO_TOKEN }}
-        enable: all #performance,portability,warning
+        enable: all
         inconclusive: disable
         inline_suppression: disable
         force_language: c
         force: enable
         max_ctu_depth: 2
-        # platform: disable
         std: c11
         output_file: ./codecheck.txt
         other_options: --bug-hunting --verbose --std=c11
@@ -77,57 +77,14 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install QIO
+      - name: Install
         run: |
           python -m pip install --upgrade pip
           pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
           pio platform install file://.
 
       - name: Build examples
-        id: build
-        if: success()
         working-directory: examples
         run: |
           pio run -d ${{ matrix.example }}
-          echo "::set-output name=status::success"
 
-      - name: Upload
-        if: env.UPLOAD_BUILD
-        uses: actions/upload-artifact@v2
-        with:
-          name: qio_${{ matrix.example }}_${{ matrix.os }}
-          path: examples/${{ matrix.example }}/.pio/build
-
-  qio_pass:
-    needs:
-      - QIO
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - name: notification
-        uses: Qful/mqtt-action@master
-        with:
-          protocol: mqtt
-          host: ${{secrets.MQTT_SERVER}}
-          port: 1883
-          username: ${{secrets.MQTT_USERNAME}}
-          password: ${{secrets.MQTT_PASSWORD}}
-          topic: ${{github.repository}}/${{github.workflow}}
-          message: "QIO success"
-
-  qio_fail:
-    needs:
-      - QIO
-    if: failure()
-    runs-on: ubuntu-latest
-    steps:
-      - name: notification
-        uses: Qful/mqtt-action@master
-        with:
-          protocol: mqtt
-          host: ${{secrets.MQTT_SERVER}}
-          port: 1883
-          username: ${{secrets.MQTT_USERNAME}}
-          password: ${{secrets.MQTT_PASSWORD}}
-          topic: ${{github.repository}}/${{github.workflow}}
-          message: "QIO failure"
